Fix script names

--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
 	"private": true,
 	"scripts": {
 		"postinstall": "electron-builder install-app-deps",
-		"start": "npm-run-all start:js --parallel start:app 'start:js:* --watch'",
-		"start:js": "run-p start:js:*",
-		"start:js:main": "webpack --config ./webpack.main.js --mode development",
-		"start:js:renderer": "webpack --config ./webpack.renderer.js --mode development",
+		"start": "npm-run-all start:ts --parallel start:app 'start:ts:* --watch'",
+		"start:ts": "run-p start:ts:*",
+		"start:ts:main": "webpack --config ./webpack.main.js --mode development",
+		"start:ts:renderer": "webpack --config ./webpack.renderer.js --mode development",
 		"start:app": "electron .",
 		"build": "run-s build:*",
 		"build:clean": "rm -rf ./bundle ./dist",
-		"build:js": "run-p build:js:*",
-		"build:js:main": "webpack --config ./webpack.main.js --mode production",
-		"build:js:renderer": "webpack --config ./webpack.renderer.js --mode production",
+		"build:ts": "run-p build:ts:*",
+		"build:ts:main": "webpack --config ./webpack.main.js --mode production",
+		"build:ts:renderer": "webpack --config ./webpack.renderer.js --mode production",
 		"build:app": "electron-builder --mac --windows --linux",
-		"release": "run-s build:clean build:js 'build:app --publish always'",
+		"release": "run-s build:clean build:ts 'build:app --publish always'",
 		"website": "run-s website:*",
 		"website:build": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
 		"website:serve": "serve ./website --listen 3000",
