--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"build:ts:main": "webpack --config ./webpack.main.js --mode production",
 		"build:ts:renderer": "webpack --config ./webpack.renderer.js --mode production",
 		"build:app": "electron-builder --mac --windows --linux",
-		"release": "run-s build:clean build:ts 'build:app --publish always'",
+		"release": "env-cmd run-s build:clean build:ts 'build:app --publish always'",
 		"website": "run-s website:*",
 		"website:build": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
 		"website:serve": "serve ./website --listen 3000",
@@ -87,6 +87,7 @@
 		"css-loader": "^2.1.1",
 		"electron": "^5.0.3",
 		"electron-builder": "^20.39.0",
+		"env-cmd": "^9.0.3",
 		"eslint": "^5.15.2",
 		"eslint-config-airbnb": "^17.0.0",
 		"eslint-config-prettier": "^4.3.0",
