Use `@samuelmeuli/tsconfig`

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
 	"version": "2.2.0",
 	"description": "Simple and secure journal app",
 	"main": "./bundle/main.js",
-	"author": "Samuel Meuli <me@samuelmeuli.com>",
+	"author": {
+		"name": "Samuel Meuli",
+		"email": "me@samuelmeuli.com",
+		"url": "https://samuelmeuli.com"
+	},
 	"repository": "github:samuelmeuli/mini-diary",
 	"homepage": "https://minidiary.app",
 	"license": "MIT",
@@ -26,9 +30,7 @@
 		"website": "run-s website:*",
 		"website:build": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
 		"website:serve": "serve ./website --listen 3000",
-		"typecheck": "run-p typecheck:*",
-		"typecheck:main": "tsc --project ./src/main",
-		"typecheck:renderer": "tsc --project ./src/renderer",
+		"typecheck": "tsc --noEmit",
 		"format": "prettier --write",
 		"lint:css": "stylelint --fix --max-warnings 0",
 		"lint:scss": "stylelint --fix --max-warnings 0 --syntax scss",
@@ -81,6 +83,7 @@
 		"@babel/preset-typescript": "^7.3.3",
 		"@samuelmeuli/eslint-config": "^2.1.0",
 		"@samuelmeuli/stylelint-config": "^1.0.2",
+		"@samuelmeuli/tsconfig": "^0.1.1",
 		"@typescript-eslint/eslint-plugin": "^1.10.2",
 		"@typescript-eslint/parser": "^1.10.2",
 		"babel-loader": "^8.0.6",
