--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
 		"electron-is": "^3.0.0",
 		"electron-md-to-pdf": "^1.0.1",
 		"electron-settings": "^3.2.0",
+		"electron-unhandled": "^2.2.0",
 		"electron-updater": "^4.0.14",
+		"electron-util": "^0.12.1",
 		"feather-icons": "^4.22.1",
 		"license-checker-webpack-plugin": "^0.0.9",
 		"lodash.debounce": "^4.0.8",
