--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
 		"remark": "^10.0.1",
 		"remark-stringify": "^6.0.4",
 		"semver": "^6.1.2",
-		"strip-markdown": "https://github.com/samuelmeuli/strip-markdown"
+		"strip-markdown": "https://github.com/samuelmeuli/strip-markdown",
+		"type-fest": "^0.5.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.4.5",
