Change full-text search library (closes #12)
Switch from `elasticlunr` (unmaintained) to `minisearch`

--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
 		"draft-js": "^0.10.5",
 		"draft-js-autolist-plugin": "^2.0.0",
 		"draft-js-plugins-editor": "^2.1.1",
-		"elasticlunr": "^0.9.5",
 		"electron-context-menu": "^0.13.0",
 		"electron-debug": "^3.0.0",
 		"electron-md-to-pdf": "^1.0.1",
@@ -63,6 +62,7 @@
 		"lodash.debounce": "^4.0.8",
 		"markdown-draft-js": "^1.4.1",
 		"minireset.css": "^0.0.5",
+		"minisearch": "^2.0.3",
 		"moment": "^2.22.2",
 		"react": "^16.8.4",
 		"react-day-picker": "https://github.com/samuelmeuli/react-day-picker",
