--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
 		"remark": "^11.0.0",
 		"remark-stringify": "^7.0.0",
 		"semver": "^6.1.2",
-		"strip-markdown": "github:samuelmeuli/strip-markdown",
+		"strip-markdown": "^3.1.0",
 		"type-fest": "^0.6.0"
 	},
 	"devDependencies": {
