--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 		"electron-debug": "^3.0.0",
 		"electron-md-to-pdf": "^1.0.1",
 		"electron-settings": "^3.2.0",
-		"electron-unhandled": "^2.2.0",
+		"electron-unhandled": "^3.0.0",
 		"electron-updater": "^4.0.14",
 		"electron-util": "^0.12.1",
 		"feather-icons": "^4.22.1",
@@ -84,22 +84,24 @@
 		"@babel/preset-env": "^7.4.5",
 		"@babel/preset-react": "^7.0.0",
 		"@babel/preset-typescript": "^7.3.3",
-		"@samuelmeuli/eslint-config": "^2.2.0",
+		"@samuelmeuli/eslint-config": "^3.0.1",
 		"@samuelmeuli/stylelint-config": "^1.0.2",
 		"@samuelmeuli/tsconfig": "^0.1.1",
-		"@typescript-eslint/eslint-plugin": "^1.11.0",
-		"@typescript-eslint/parser": "^1.11.0",
+		"@typescript-eslint/eslint-plugin": "^2.0.0",
+		"@typescript-eslint/parser": "^2.0.0",
 		"babel-loader": "^8.0.6",
 		"css-loader": "^3.0.0",
 		"electron": "^5.0.3",
 		"electron-builder": "^20.44.4",
 		"env-cmd": "^9.0.3",
-		"eslint": "^5.0.0",
-		"eslint-config-airbnb": "^17.0.0",
+		"eslint": "6.1.0",
+		"eslint-config-airbnb": "18.0.1",
 		"eslint-config-prettier": "^6.0.0",
-		"eslint-plugin-import": "^2.18.0",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.14.2",
+		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.14.3",
+		"eslint-plugin-react-hooks": "^1.7.0",
+		"eslint-plugin-simple-import-sort": "^4.0.0",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^3.0.0",
 		"jest": "^24.8.0",
