Improve website and README
* Add "Features" and "FAQ" sections
* Improve website script for filling in download URLs
* Small styling improvements
* Improve website-related NPM scripts
* Only keep information for developers in README

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-# Node
+# NPM
 node_modules/
 
-# Webpack (React bundle)
+# React bundle (Webpack)
 bundle/
 
-# electron-builder
+# Packaged app (electron-builder)
 dist/
 
 # Credentials
 .env
 
-# Provisioning profile
+# Apple provisioning profile
 *.provisionprofile
 
-# Website
-minireset.*
+# Generated website assets
+website/index.js
+website/styles/minireset.min.css
