--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
 		"build:ts:renderer": "webpack --config ./webpack.renderer.js --mode production",
 		"build:app": "electron-builder --mac --windows --linux",
 		"release": "env-cmd run-s build:clean build:ts 'build:app --publish always'",
-		"website": "run-s website:*",
-		"website:build": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
-		"website:serve": "serve ./website --listen 3000",
+		"website:start": "run-p website:start:*",
+		"website:start:serve": "serve ./website --listen 3000",
+		"website:start:ts": "tsc ./website/index.ts --watch",
+		"website:build": "website:build:*",
+		"website:build:css": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
+		"website:build:ts": "tsc ./website/index.ts",
 		"test": "run-s test:*",
 		"test:jest": "TZ=GMT jest",
 		"test:types": "tsc --noEmit",
