--- a/package.json
+++ b/package.json
@@ -43,85 +43,85 @@
 		"lint:ts": "eslint --ext .ts,.tsx --fix --max-warnings 0"
 	},
 	"dependencies": {
-		"@svgr/webpack": "^4.3.2",
-		"@types/draft-js": "^0.10.34",
+		"@svgr/webpack": "^4.3.3",
+		"@types/draft-js": "^0.10.36",
 		"@types/electron-settings": "^3.1.1",
 		"@types/lodash.debounce": "^4.0.6",
-		"@types/react": "^16.8.22",
-		"@types/react-dom": "^16.8.3",
-		"@types/react-redux": "^7.1.1",
+		"@types/react": "^16.9.5",
+		"@types/react-dom": "^16.9.1",
+		"@types/react-redux": "^7.1.4",
 		"@types/redux-logger": "^3.0.7",
-		"@types/semver": "^6.0.1",
-		"draft-js": "^0.11.0",
+		"@types/semver": "^6.0.2",
+		"draft-js": "^0.11.1",
 		"draft-js-list-plugin": "^1.0.0",
 		"draft-js-plugins-editor": "^3.0.0",
-		"electron-context-menu": "^0.14.0",
+		"electron-context-menu": "^0.15.0",
 		"electron-debug": "^3.0.0",
 		"electron-md-to-pdf": "^2.0.0",
 		"electron-settings": "^3.2.0",
 		"electron-unhandled": "^3.0.0",
 		"electron-updater": "^4.0.14",
-		"electron-util": "^0.12.1",
+		"electron-util": "^0.12.2",
 		"feather-icons": "^4.22.1",
-		"license-checker-webpack-plugin": "^0.0.9",
+		"license-checker-webpack-plugin": "^0.1.2",
 		"lodash.debounce": "^4.0.8",
-		"markdown-draft-js": "^2.0.0",
+		"markdown-draft-js": "^2.1.1",
 		"minireset.css": "^0.0.5",
-		"minisearch": "^2.0.3",
+		"minisearch": "^2.1.1",
 		"moment": "^2.22.2",
-		"react": "^16.8.4",
+		"react": "^16.10.2",
 		"react-day-picker": "github:samuelmeuli/react-day-picker",
-		"react-dom": "^16.8.4",
-		"react-redux": "^7.1.0",
+		"react-dom": "^16.10.2",
+		"react-redux": "^7.1.1",
 		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
 		"remark": "^11.0.0",
-		"remark-stringify": "^7.0.0",
+		"remark-stringify": "^7.0.3",
 		"semver": "^6.1.2",
 		"strip-markdown": "^3.1.0",
-		"type-fest": "^0.7.1"
+		"type-fest": "^0.8.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.4.5",
+		"@babel/core": "^7.6.4",
 		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/preset-env": "^7.4.5",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/preset-typescript": "^7.3.3",
-		"@samuelmeuli/eslint-config": "^3.0.1",
-		"@samuelmeuli/stylelint-config": "^1.0.2",
-		"@samuelmeuli/tsconfig": "^0.1.1",
-		"@typescript-eslint/eslint-plugin": "^2.0.0",
-		"@typescript-eslint/parser": "^2.0.0",
+		"@babel/preset-env": "^7.6.3",
+		"@babel/preset-react": "^7.6.3",
+		"@babel/preset-typescript": "^7.6.0",
+		"@samuelmeuli/eslint-config": "^4.0.1",
+		"@samuelmeuli/stylelint-config": "^1.0.3",
+		"@samuelmeuli/tsconfig": "^0.2.0",
+		"@typescript-eslint/eslint-plugin": "^2.3.3",
+		"@typescript-eslint/parser": "^2.3.3",
 		"babel-loader": "^8.0.6",
 		"css-loader": "^3.0.0",
-		"electron": "^6.0.2",
-		"electron-builder": "^20.44.4",
-		"env-cmd": "^9.0.3",
-		"eslint": "6.1.0",
+		"electron": "^6.0.12",
+		"electron-builder": "^21.2.0",
+		"env-cmd": "^10.0.1",
+		"eslint": "6.5.1",
 		"eslint-config-airbnb": "18.0.1",
-		"eslint-config-prettier": "^6.0.0",
+		"eslint-config-prettier": "^6.4.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-react": "^7.14.3",
+		"eslint-plugin-react": "^7.16.0",
 		"eslint-plugin-react-hooks": "^1.7.0",
 		"eslint-plugin-simple-import-sort": "^4.0.0",
 		"html-webpack-plugin": "^3.2.0",
-		"husky": "^3.0.0",
+		"husky": "^3.0.9",
 		"jest": "^24.8.0",
-		"lint-staged": "^9.2.0",
+		"lint-staged": "^9.4.2",
 		"mockdate": "^2.0.3",
 		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.18.2",
-		"sass-loader": "^7.0.3",
-		"serve": "^11.0.2",
+		"sass-loader": "^8.0.0",
+		"serve": "^11.2.0",
 		"style-loader": "^1.0.0",
-		"stylelint": "^10.1.0",
-		"typescript": "^3.5.2",
-		"webpack": "^4.35.0",
-		"webpack-cli": "^3.3.5",
-		"webpack-merge": "^4.2.1"
+		"stylelint": "^11.1.1",
+		"typescript": "^3.6.4",
+		"webpack": "^4.41.1",
+		"webpack-cli": "^3.3.9",
+		"webpack-merge": "^4.2.2"
 	},
 	"babel": {
 		"presets": [
@@ -151,9 +151,7 @@
 	"eslintConfig": {
 		"root": true,
 		"extends": [
-			"@samuelmeuli/eslint-config/react-typescript",
-			"prettier",
-			"prettier/@typescript-eslint"
+			"@samuelmeuli/eslint-config/typescript-react"
 		],
 		"env": {
 			"browser": true,
