--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
 		"build:ts": "run-p build:ts:*",
 		"build:ts:main": "webpack --config ./webpack.main.js --mode production",
 		"build:ts:renderer": "webpack --config ./webpack.renderer.js --mode production",
-		"build:app": "electron-builder --mac --windows --linux",
-		"release": "env-cmd run-s build:clean build:ts 'build:app --publish always'",
 		"website:start": "run-p website:start:*",
 		"website:start:serve": "serve ./website --listen 3000",
 		"website:start:ts": "tsc ./website/index.ts --watch",
@@ -267,6 +265,9 @@
 			]
 		},
 		"linux": {
+			"target": [
+				"AppImage"
+			],
 			"category": "Office"
 		},
 		"dmg": {
