Use `cross-env`

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"website:build:css": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
 		"website:build:ts": "tsc ./website/index.ts",
 		"test": "run-s test:*",
-		"test:jest": "TZ=GMT jest",
+		"test:jest": "cross-env TZ=GMT jest",
 		"test:types": "tsc --noEmit",
 		"format": "prettier --write",
 		"lint:css": "stylelint --fix --max-warnings 0",
@@ -92,6 +92,7 @@
 		"@typescript-eslint/eslint-plugin": "^2.3.3",
 		"@typescript-eslint/parser": "^2.3.3",
 		"babel-loader": "^8.0.6",
+		"cross-env": "^6.0.3",
 		"css-loader": "^3.0.0",
 		"electron": "^6.0.12",
 		"electron-builder": "^22.1.0",
