ignore IntelliJ IDEA's IDE-specific files

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ dist/
 # Generated website assets
 website/index.js
 website/styles/minireset.min.css
+
+# IDEs from IntelliJ IDEA (like, WebStorm)
+.idea/
