--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
 		"postinstall": "electron-builder install-app-deps",
 		"start": "npm-run-all start:ts --parallel start:app 'start:ts:* --watch'",
 		"start:ts": "run-p start:ts:*",
-		"start:ts:main": "webpack --config ./webpack.main.js --mode development",
-		"start:ts:renderer": "webpack --config ./webpack.renderer.js --mode development",
+		"start:ts:main": "webpack --config ./webpack.main.ts --mode development",
+		"start:ts:renderer": "webpack --config ./webpack.renderer.ts --mode development",
 		"start:app": "electron .",
 		"build": "run-s build:*",
 		"build:clean": "rm -rf ./bundle ./dist",
 		"build:ts": "run-p build:ts:*",
-		"build:ts:main": "webpack --config ./webpack.main.js --mode production",
-		"build:ts:renderer": "webpack --config ./webpack.renderer.js --mode production",
+		"build:ts:main": "webpack --config ./webpack.main.ts --mode production",
+		"build:ts:renderer": "webpack --config ./webpack.renderer.ts --mode production",
 		"website:start": "npm-run-all website:build:css --parallel website:start:*",
 		"website:start:serve": "serve ./website --listen 3000",
 		"website:start:ts": "tsc ./website/index.ts --watch",
@@ -37,7 +37,6 @@
 		"format": "prettier --write",
 		"lint:css": "stylelint --fix --max-warnings 0",
 		"lint:scss": "stylelint --fix --max-warnings 0 --syntax scss",
-		"lint:js": "eslint --ext .js,.jsx --fix --max-warnings 0",
 		"lint:ts": "eslint --ext .ts,.tsx --fix --max-warnings 0"
 	},
 	"dependencies": {
@@ -45,6 +44,7 @@
 		"@types/draft-js": "^0.10.36",
 		"@types/electron-settings": "^3.1.1",
 		"@types/lodash.debounce": "^4.0.6",
+		"@types/node": "^12.12.14",
 		"@types/react": "^16.9.5",
 		"@types/react-dom": "^16.9.1",
 		"@types/react-redux": "^7.1.4",
@@ -89,6 +89,10 @@
 		"@samuelmeuli/eslint-config": "^4.0.1",
 		"@samuelmeuli/stylelint-config": "^1.0.3",
 		"@samuelmeuli/tsconfig": "^0.2.0",
+		"@types/html-webpack-plugin": "^3.2.1",
+		"@types/license-checker-webpack-plugin": "^0.0.2",
+		"@types/webpack": "^4.41.0",
+		"@types/webpack-merge": "^4.1.5",
 		"@typescript-eslint/eslint-plugin": "^2.3.3",
 		"@typescript-eslint/parser": "^2.3.3",
 		"babel-loader": "^8.0.6",
@@ -117,6 +121,7 @@
 		"serve": "^11.2.0",
 		"style-loader": "^1.0.0",
 		"stylelint": "^11.1.1",
+		"ts-node": "^8.5.2",
 		"typescript": "^3.6.4",
 		"webpack": "^4.41.1",
 		"webpack-cli": "^3.3.9",
@@ -168,7 +173,7 @@
 				{
 					"devDependencies": [
 						"tests/**/*",
-						"webpack.*.js"
+						"webpack.*.ts"
 					]
 				}
 			],
@@ -183,11 +188,6 @@
 		"trailingComma": "all"
 	},
 	"lint-staged": {
-		"*.{js,jsx}": [
-			"yarn lint:js",
-			"yarn format",
-			"git add"
-		],
 		"*.{ts,tsx}": [
 			"yarn lint:ts",
 			"yarn format",
@@ -203,7 +203,7 @@
 			"yarn format",
 			"git add"
 		],
-		"*.{json,md,yml}": [
+		"*.{html,js,json,jsx,md,yml}": [
 			"yarn format",
 			"git add"
 		]
