--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
 		"eslint-plugin-react": "^7.16.0",
 		"eslint-plugin-react-hooks": "^1.7.0",
 		"eslint-plugin-simple-import-sort": "^4.0.0",
+		"file-loader": "^5.0.2",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^3.0.9",
 		"jest": "^24.8.0",
