--- a/package.json
+++ b/package.json
@@ -118,9 +118,9 @@
 		"jest": "^24.8.0",
 		"lint-staged": "^9.5.0",
 		"mockdate": "^2.0.3",
-		"node-sass": "^4.9.2",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.18.2",
+		"sass": "^1.23.7",
 		"sass-loader": "^8.0.0",
 		"serve": "^11.2.0",
 		"style-loader": "^1.0.1",
