Revert to Electron 7.1.2
Fixes #48

--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
 		"babel-loader": "^8.0.6",
 		"cross-env": "^6.0.3",
 		"css-loader": "^3.4.0",
-		"electron": "^7.1.7",
+		"electron": "7.1.2",
 		"electron-builder": "^22.1.0",
 		"electron-notarize": "^0.2.1",
 		"eslint": "6.7.2",
