--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
 		"css-loader": "^3.4.0",
 		"electron": "7.1.2",
 		"electron-builder": "^22.1.0",
-		"electron-notarize": "^0.2.1",
+		"electron-builder-notarize": "^1.1.1",
 		"eslint": "6.7.2",
 		"eslint-config-airbnb": "18.0.1",
 		"eslint-config-prettier": "^6.7.0",
@@ -227,7 +227,7 @@
 			}
 		],
 		"afterPack": "./scripts/after-pack.js",
-		"afterSign": "./scripts/notarize.js",
+		"afterSign": "electron-builder-notarize",
 		"mac": {
 			"category": "public.app-category.lifestyle",
 			"darkModeSupport": true,
