--- a/package.json
+++ b/package.json
@@ -36,26 +36,25 @@
 		"test:types": "tsc --noEmit",
 		"format": "prettier --write",
 		"lint:css": "stylelint --fix --max-warnings 0",
-		"lint:scss": "stylelint --fix --max-warnings 0 --syntax scss",
 		"lint:ts": "eslint --ext .ts,.tsx --fix --max-warnings 0"
 	},
 	"dependencies": {
-		"@svgr/webpack": "^4.3.3",
+		"@svgr/webpack": "^5.0.1",
 		"@types/draft-js": "^0.10.36",
 		"@types/electron-settings": "^3.1.1",
 		"@types/lodash.debounce": "^4.0.6",
 		"@types/node": "^12.12.21",
-		"@types/react": "^16.9.16",
+		"@types/react": "^16.9.17",
 		"@types/react-dom": "^16.9.1",
 		"@types/react-redux": "^7.1.4",
 		"@types/redux-logger": "^3.0.7",
 		"@types/semver": "^6.0.2",
 		"draft-js": "^0.11.3",
-		"draft-js-list-plugin": "^1.0.0",
+		"draft-js-list-plugin": "^1.0.2",
 		"draft-js-plugins-editor": "^3.0.0",
-		"electron-context-menu": "^0.15.0",
+		"electron-context-menu": "^0.15.2",
 		"electron-debug": "^3.0.0",
-		"electron-md-to-pdf": "^2.1.1",
+		"electron-md-to-pdf": "^2.2.0",
 		"electron-settings": "^3.2.0",
 		"electron-updater": "^4.0.14",
 		"electron-util": "^0.13.1",
@@ -70,7 +69,7 @@
 		"react-day-picker": "github:samuelmeuli/react-day-picker",
 		"react-dom": "^16.10.2",
 		"react-redux": "^7.1.1",
-		"redux": "^4.0.0",
+		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
 		"remark": "^11.0.0",
@@ -87,24 +86,24 @@
 		"@babel/preset-typescript": "^7.7.7",
 		"@samuelmeuli/eslint-config": "^5.0.2",
 		"@samuelmeuli/prettier-config": "^1.0.0",
-		"@samuelmeuli/stylelint-config": "^2.0.1",
+		"@samuelmeuli/stylelint-config": "^3.0.0",
 		"@samuelmeuli/tsconfig": "^0.2.0",
 		"@types/html-webpack-plugin": "^3.2.1",
-		"@types/jest": "^24.0.24",
+		"@types/jest": "^24.0.25",
 		"@types/license-checker-webpack-plugin": "^0.0.2",
-		"@types/webpack": "^4.41.0",
+		"@types/webpack": "^4.41.1",
 		"@types/webpack-merge": "^4.1.5",
-		"@typescript-eslint/eslint-plugin": "^2.12.0",
-		"@typescript-eslint/parser": "^2.12.0",
+		"@typescript-eslint/eslint-plugin": "^2.14.0",
+		"@typescript-eslint/parser": "^2.14.0",
 		"babel-loader": "^8.0.6",
 		"cross-env": "^6.0.3",
 		"css-loader": "^3.4.0",
 		"electron": "7.1.2",
 		"electron-builder": "^22.1.0",
 		"electron-builder-notarize": "^1.1.1",
-		"eslint": "6.7.2",
+		"eslint": "6.8.0",
 		"eslint-config-airbnb": "18.0.1",
-		"eslint-config-prettier": "^6.7.0",
+		"eslint-config-prettier": "^6.9.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-react": "^7.14.3",
@@ -119,14 +118,14 @@
 		"mockdate": "^2.0.3",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.18.2",
-		"sass": "^1.23.7",
+		"sass": "^1.24.0",
 		"sass-loader": "^8.0.0",
-		"serve": "^11.2.0",
-		"style-loader": "^1.0.2",
-		"stylelint": "^12.0.0",
+		"serve": "^11.3.0",
+		"style-loader": "^1.1.2",
+		"stylelint": "^12.0.1",
 		"ts-node": "^8.5.4",
-		"typescript": "^3.7.3",
-		"webpack": "^4.41.4",
+		"typescript": "^3.7.4",
+		"webpack": "^4.41.5",
 		"webpack-cli": "^3.3.9",
 		"webpack-merge": "^4.2.2"
 	},
@@ -189,17 +188,12 @@
 			"yarn format",
 			"git add"
 		],
-		"*.css": [
+		"*.{css,sass,scss}": [
 			"yarn lint:css",
 			"yarn format",
 			"git add"
 		],
-		"*.scss": [
-			"yarn lint:scss",
-			"yarn format",
-			"git add"
-		],
-		"*.{html,js,json,jsx,md,yml}": [
+		"*.{html,js,json,jsx,md,vue,yaml,yml}": [
 			"yarn format",
 			"git add"
 		]
