--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
 		"draft-js-plugins-editor": "^3.0.0",
 		"electron-context-menu": "^0.15.2",
 		"electron-debug": "^3.0.0",
+		"electron-log": "^4.0.2",
 		"electron-md-to-pdf": "^2.2.0",
 		"electron-settings": "^3.2.0",
+		"electron-unhandled": "^3.0.1",
 		"electron-updater": "^4.0.14",
 		"electron-util": "^0.13.1",
 		"feather-icons": "^4.25.0",
