--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,10 @@ jobs:
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: 12
+
+      - name: Install dependencies
+        run: yarn install
 
       - name: Run tests
-        run: |
-          yarn
-          yarn test
+        run: yarn test
