--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
 		"@types/draft-js": "^0.10.36",
 		"@types/electron-settings": "^3.1.1",
 		"@types/lodash.debounce": "^4.0.6",
-		"@types/node": "^13.1.8",
+		"@types/node": "^13.7.0",
 		"@types/react": "^16.9.17",
 		"@types/react-dom": "^16.9.1",
-		"@types/react-redux": "^7.1.4",
+		"@types/react-redux": "^7.1.7",
 		"@types/redux-logger": "^3.0.7",
-		"@types/semver": "^6.0.2",
+		"@types/semver": "^7.1.0",
 		"draft-js": "^0.11.3",
 		"draft-js-list-plugin": "^1.0.2",
 		"draft-js-plugins-editor": "^3.0.0",
-		"electron-context-menu": "^0.15.2",
+		"electron-context-menu": "^0.16.0",
 		"electron-debug": "^3.0.0",
-		"electron-log": "^4.0.2",
+		"electron-log": "^4.0.6",
 		"electron-md-to-pdf": "^2.2.0",
 		"electron-settings": "^3.2.0",
 		"electron-unhandled": "^3.0.1",
@@ -62,7 +62,7 @@
 		"electron-util": "^0.13.1",
 		"feather-icons": "^4.25.0",
 		"lodash.debounce": "^4.0.8",
-		"markdown-draft-js": "^2.1.1",
+		"markdown-draft-js": "^2.2.0",
 		"minireset.css": "^0.0.6",
 		"minisearch": "^2.1.1",
 		"moment": "^2.22.2",
@@ -76,47 +76,47 @@
 		"redux-thunk": "^2.3.0",
 		"remark": "^11.0.0",
 		"remark-stringify": "^7.0.3",
-		"semver": "^6.1.2",
+		"semver": "^7.1.2",
 		"strip-markdown": "^3.1.0",
-		"type-fest": "^0.8.1",
+		"type-fest": "^0.10.0",
 		"word-count": "^0.2.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.7.7",
+		"@babel/core": "^7.8.4",
 		"@babel/plugin-proposal-class-properties": "^7.7.4",
-		"@babel/preset-env": "^7.7.7",
+		"@babel/preset-env": "^7.8.4",
 		"@babel/preset-react": "^7.7.4",
 		"@babel/preset-typescript": "^7.7.7",
 		"@samuelmeuli/eslint-config": "^6.0.0",
 		"@samuelmeuli/prettier-config": "^1.0.0",
 		"@samuelmeuli/stylelint-config": "^3.0.0",
 		"@samuelmeuli/tsconfig": "^1.0.0",
-		"@types/html-webpack-plugin": "^3.2.1",
-		"@types/jest": "^24.0.25",
+		"@types/html-webpack-plugin": "^3.2.2",
+		"@types/jest": "^25.1.1",
 		"@types/license-checker-webpack-plugin": "^0.0.2",
-		"@types/webpack": "^4.41.1",
+		"@types/webpack": "^4.41.5",
 		"@types/webpack-merge": "^4.1.5",
-		"@typescript-eslint/eslint-plugin": "^2.14.0",
-		"@typescript-eslint/parser": "^2.14.0",
+		"@typescript-eslint/eslint-plugin": "^2.19.0",
+		"@typescript-eslint/parser": "^2.19.0",
 		"babel-loader": "^8.0.6",
-		"cross-env": "^6.0.3",
+		"cross-env": "^7.0.0",
 		"css-loader": "^3.4.0",
 		"electron": "7.1.2",
-		"electron-builder": "^22.1.0",
+		"electron-builder": "^22.3.2",
 		"electron-builder-notarize": "^1.1.1",
 		"eslint": "6.8.0",
 		"eslint-config-airbnb": "18.0.1",
-		"eslint-config-prettier": "^6.9.0",
-		"eslint-plugin-import": "^2.20.0",
+		"eslint-config-prettier": "^6.10.0",
+		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-react": "^7.14.3",
+		"eslint-plugin-react": "^7.18.3",
 		"eslint-plugin-react-hooks": "^1.7.0",
 		"file-loader": "^5.0.2",
 		"html-webpack-plugin": "^3.2.0",
-		"husky": "^4.2.0",
+		"husky": "^4.2.1",
 		"jest": "^25.1.0",
 		"license-checker-webpack-plugin": "^0.1.4",
-		"lint-staged": "^9.5.0",
+		"lint-staged": "^10.0.7",
 		"mockdate": "^2.0.3",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.18.2",
@@ -183,17 +183,14 @@
 	"lint-staged": {
 		"*.{ts,tsx}": [
 			"yarn lint:ts",
-			"yarn format",
-			"git add"
+			"yarn format"
 		],
 		"*.{css,sass,scss}": [
 			"yarn lint:css",
-			"yarn format",
-			"git add"
+			"yarn format"
 		],
 		"*.{html,js,json,jsx,md,vue,yaml,yml}": [
-			"yarn format",
-			"git add"
+			"yarn format"
 		]
 	},
 	"husky": {
