--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
 		"babel-loader": "^8.0.6",
 		"cross-env": "^7.0.0",
 		"css-loader": "^3.4.0",
-		"electron": "7.1.2",
+		"electron": "^8.0.0",
 		"electron-builder": "^22.3.2",
 		"electron-builder-notarize": "^1.1.1",
 		"eslint": "6.8.0",
