Fix TypeScript config for website script

--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
 		"build:ts:renderer": "webpack --config ./webpack.renderer.ts --mode production",
 		"website:start": "npm-run-all website:build:css --parallel website:start:*",
 		"website:start:serve": "serve ./website --listen 3000",
-		"website:start:ts": "tsc ./website/index.ts --watch",
+		"website:start:ts": "tsc --project ./website --watch",
 		"website:build": "run-p website:build:*",
 		"website:build:css": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
-		"website:build:ts": "tsc ./website/index.ts",
+		"website:build:ts": "tsc --project ./website",
 		"test": "run-s test:*",
 		"test:jest": "cross-env TZ=GMT jest",
-		"test:types": "tsc --noEmit",
+		"test:types": "tsc --project ./website --noEmit",
 		"lint:css": "stylelint --fix --max-warnings 0",
 		"lint:ts": "eslint --ext .ts,.tsx --fix --max-warnings 0",
 		"format": "prettier --write"
