Revert "Stop building for MAS"
This reverts commit 2df29dd7745a42bb149c46cd993bffc4cc22efb1.

--- a/package.json
+++ b/package.json
@@ -216,6 +216,11 @@
 		"afterPack": "./scripts/after-pack.js",
 		"afterSign": "electron-builder-notarize",
 		"mac": {
+			"target": [
+				"dmg",
+				"mas",
+				"zip"
+			],
 			"category": "public.app-category.lifestyle",
 			"darkModeSupport": true,
 			"electronLanguages": [
