Add `entitlements.mac.inherit.plist` file

--- a/package.json
+++ b/package.json
@@ -258,7 +258,7 @@
 		},
 		"mas": {
 			"entitlements": "./build/entitlements.mas.plist",
-			"entitlementsInherit": "./build/entitlements.mas.plist"
+			"entitlementsInherit": "./build/entitlements.mas.inherit.plist"
 		},
 		"linux": {
 			"category": "Utility"
