--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"remark-stringify": "^7.0.3",
 		"semver": "^7.1.3",
 		"strip-markdown": "^3.1.0",
-		"word-count": "^0.2.2"
+		"word-count": "github:samuelmeuli/word-count"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.4",
