--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
 		"test": "run-s test:*",
 		"test:jest": "cross-env TZ=GMT jest",
 		"test:types": "tsc --project ./website --noEmit",
-		"lint:css": "stylelint --fix --max-warnings 0",
-		"lint:ts": "eslint --ext .ts,.tsx --fix --max-warnings 0",
-		"format": "prettier --write"
+		"lint:css": "stylelint --fix --ignore-path ./.gitignore --max-warnings 0 '**/*.{css,sass,scss}'",
+		"lint:ts": "eslint --ext .ts,.tsx --fix --ignore-path ./.gitignore --max-warnings 0 '**/*.{ts,tsx}'",
+		"format": "prettier --ignore-path ./.gitignore --write '**/*.{css,html,js,json,jsx,less,md,scss,ts,tsx,vue,yaml,yml}'"
 	},
 	"dependencies": {
 		"@svgr/webpack": "^5.3.0",
@@ -112,10 +112,8 @@
 		"eslint-plugin-react-hooks": "^2.5.1",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.0.1",
-		"husky": "^4.2.3",
 		"jest": "^25.1.0",
 		"license-checker-webpack-plugin": "^0.1.4",
-		"lint-staged": "^10.0.9",
 		"mockdate": "^2.0.3",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.18.2",
@@ -179,24 +177,6 @@
 		"extends": "@samuelmeuli/stylelint-config"
 	},
 	"prettier": "@samuelmeuli/prettier-config",
-	"lint-staged": {
-		"*.{ts,tsx}": [
-			"yarn lint:ts",
-			"yarn format"
-		],
-		"*.{css,sass,scss}": [
-			"yarn lint:css",
-			"yarn format"
-		],
-		"*.{html,js,json,jsx,md,vue,yaml,yml}": [
-			"yarn format"
-		]
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "yarn test && lint-staged"
-		}
-	},
 	"build": {
 		"appId": "com.samuelmeuli.minidiary",
 		"files": [
