Handle all dates with Moment.js UTC mode
This should help prevent unwanted behavior due to implicit timezone conversions.

Fixes #69

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"website:build:css": "cp ./node_modules/minireset.css/minireset.min.css ./website/styles/",
 		"website:build:ts": "tsc --project ./website",
 		"test": "run-s test:*",
-		"test:jest": "cross-env TZ=GMT jest",
+		"test:jest": "jest",
 		"test:types": "tsc --noEmit && tsc --project ./website --noEmit",
 		"lint:css": "stylelint --fix --ignore-path ./.gitignore --max-warnings 0 '**/*.{css,sass,scss}'",
 		"lint:ts": "eslint --ext .ts,.tsx --fix --ignore-path ./.gitignore --max-warnings 0 '**/*.{ts,tsx}'",
@@ -98,7 +98,6 @@
 		"@typescript-eslint/eslint-plugin": "^2.26.0",
 		"@typescript-eslint/parser": "^2.26.0",
 		"babel-loader": "^8.1.0",
-		"cross-env": "^7.0.2",
 		"css-loader": "^3.4.0",
 		"electron": "^8.2.0",
 		"electron-builder": "^22.4.1",
