--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
 		"@types/html-webpack-plugin": "^3.2.2",
 		"@types/jest": "^25.2.1",
 		"@types/license-checker-webpack-plugin": "^0.0.2",
+		"@types/moment-timezone": "^0.5.13",
 		"@types/webpack": "^4.41.10",
 		"@types/webpack-merge": "^4.1.5",
 		"@typescript-eslint/eslint-plugin": "^2.27.0",
@@ -114,6 +115,7 @@
 		"jest": "^25.3.0",
 		"license-checker-webpack-plugin": "^0.1.4",
 		"mockdate": "^2.0.3",
+		"moment-timezone": "^0.5.28",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.18.2",
 		"sass": "^1.26.3",
