--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Run linters
+      - name: Lint
         run: |
           yarn lint:css
           yarn lint:ts
