--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,9 @@ on:
 
 jobs:
   test:
+    name: Test
     runs-on: ${{ matrix.os }}
 
-    # Platforms to test on
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -17,7 +17,7 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v2
 
-      - name: Install Node.js, NPM and Yarn
+      - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 12
