--- a/package.json
+++ b/package.json
@@ -47,22 +47,22 @@
 		"@types/electron-settings": "^3.1.1",
 		"@types/lodash.debounce": "^4.0.6",
 		"@types/moment-timezone": "^0.5.13",
-		"@types/node": "^14.0.1",
+		"@types/node": "^14.0.5",
 		"@types/react": "^16.9.35",
 		"@types/react-dom": "^16.9.8",
-		"@types/react-redux": "^7.1.8",
+		"@types/react-redux": "^7.1.9",
 		"@types/redux-logger": "^3.0.7",
 		"@types/semver": "^7.2.0",
 		"draft-js": "^0.11.5",
 		"draft-js-list-plugin": "^1.0.2",
 		"draft-js-plugins-editor": "^3.0.0",
 		"electron-context-menu": "^2.0.1",
-		"electron-debug": "^3.0.0",
-		"electron-log": "^4.1.2",
+		"electron-debug": "^3.1.0",
+		"electron-log": "^4.2.0",
 		"electron-md-to-pdf": "^2.2.0",
 		"electron-settings": "^3.2.0",
 		"electron-unhandled": "^3.0.1",
-		"electron-updater": "^4.2.5",
+		"electron-updater": "4.2.5",
 		"electron-util": "^0.14.1",
 		"feather-icons": "^4.28.0",
 		"lodash.debounce": "^4.0.8",
@@ -85,26 +85,26 @@
 		"word-count": "github:samuelmeuli/word-count"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.9.6",
-		"@babel/plugin-proposal-class-properties": "^7.7.4",
-		"@babel/preset-env": "^7.9.6",
-		"@babel/preset-react": "^7.9.4",
-		"@babel/preset-typescript": "^7.9.0",
+		"@babel/core": "^7.10.1",
+		"@babel/plugin-proposal-class-properties": "^7.10.1",
+		"@babel/preset-env": "^7.10.1",
+		"@babel/preset-react": "^7.10.1",
+		"@babel/preset-typescript": "^7.10.1",
 		"@samuelmeuli/eslint-config": "^6.0.0",
 		"@samuelmeuli/prettier-config": "^1.0.0",
 		"@samuelmeuli/stylelint-config": "^3.0.0",
 		"@samuelmeuli/tsconfig": "^1.0.0",
-		"@types/html-webpack-plugin": "^3.2.2",
-		"@types/jest": "^25.2.1",
+		"@types/html-webpack-plugin": "^3.2.3",
+		"@types/jest": "^25.2.3",
 		"@types/license-checker-webpack-plugin": "^0.0.2",
-		"@types/webpack": "^4.41.12",
+		"@types/webpack": "^4.41.13",
 		"@types/webpack-merge": "^4.1.5",
-		"@typescript-eslint/eslint-plugin": "^2.33.0",
-		"@typescript-eslint/parser": "^2.33.0",
+		"@typescript-eslint/eslint-plugin": "^2.34.0",
+		"@typescript-eslint/parser": "^2.34.0",
 		"babel-loader": "^8.1.0",
 		"css-loader": "^3.5.3",
-		"electron": "^8.2.5",
-		"electron-builder": "^22.4.1",
+		"electron": "^8.3.0",
+		"electron-builder": "22.4.1",
 		"electron-builder-notarize": "^1.1.1",
 		"eslint": "6.8.0",
 		"eslint-config-airbnb": "18.1.0",
@@ -117,16 +117,16 @@
 		"html-webpack-plugin": "^4.3.0",
 		"jest": "^26.0.1",
 		"license-checker-webpack-plugin": "^0.1.4",
-		"mockdate": "^2.0.3",
+		"mockdate": "^3.0.2",
 		"npm-run-all": "^4.1.3",
 		"prettier": "^1.18.2",
-		"sass": "^1.26.5",
+		"sass": "^1.26.7",
 		"sass-loader": "^8.0.0",
-		"serve": "^11.3.0",
+		"serve": "^11.3.1",
 		"style-loader": "^1.2.1",
 		"stylelint": "^12.0.1",
-		"ts-node": "^8.10.1",
-		"typescript": "^3.9.2",
+		"ts-node": "^8.10.2",
+		"typescript": "^3.9.3",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
 		"webpack-merge": "^4.2.2"
